--- a/caravan/index.html
+++ b/caravan/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <script src="https://kit.fontawesome.com/2a8b1dc557.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <title>Caravan</title>
   </head>
